--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ gitdb==4.0.11
 GitPython==3.1.43
 idna==3.7
 ipykernel==6.29.5
-ipython==8.26.0
+# ipython==8.26.0
 jedi==0.19.1
 Jinja2==3.1.4
 joblib==1.4.2
@@ -40,11 +40,11 @@ pandas==2.2.2
 parso==0.8.4
 pathlib2==2.3.7.post1
 pathspec==0.5.5
-pillow==10.4.0
-platformdirs==4.2.2
-prompt_toolkit==3.0.47
-protobuf==5.27.2
-psutil==6.0.0
+# pillow==10.4.0
+# platformdirs==4.2.2
+# prompt_toolkit==3.0.47
+# protobuf==5.27.2
+# psutil==6.0.0
 # pure-eval==0.2.2
 # pyarrow==16.1.0
 # pydeck==0.9.1
@@ -53,7 +53,7 @@ psutil==6.0.0
 # python-dateutil==2.9.0.post0
 # pytz==2024.1
 # pywin32==306
-pyzmq==26.0.3
+# pyzmq==26.0.3
 referencing==0.35.1
 requests==2.32.3
 rich==13.7.1
